# multimodal-chatbot

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
config/: settings.py
src/api/v1/: endpoints.py
src/schemas/: chat.py
src/services/: gemini_service.py
