[project]
name = "multimodal-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "google-genai>=0.1.1",
    "pillow>=10.2.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.28.0",
]
